fix alignement tooltip et icone champ oblig (contexte tooltip)

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,8 +11,12 @@
 /*  -Z90- Ajustements pour règles SCG - À modifier dans fichier concerné
 /*====================================================================================================*/
 
-/* TODO À revoir dans ECS? */
+/* TODO À revoir dans ECS? Au moins pour p */
 body {
+    line-height: 1.2;
+}
+
+body p {
     line-height: 1.5;
 }
 
@@ -438,9 +442,14 @@ input.form-control.sm, input.form-control.sm {
 /*====================================================================================================*/
 /*  -Z88- Tooltip (Redefinitions bootstrap)
 /*====================================================================================================*/
+label.avec-tooltip .icone-champ-requis{
+    position: relative;
+    top: 10px;
+}
+
 .conteneur-tooltip {
     position: relative;
-    bottom: 12px;
+    bottom: 8px;
     left: -4px;
 }
 
@@ -654,6 +663,13 @@ form .input-validation-error, form .input-validation-error + .note-editor {
 
 
 /*====================================================================================================*/
+/*  -Z91- Ajustements ECS
+/*====================================================================================================*/
+.icone-champ-requis {
+    line-height: 1;
+}
+
+/*====================================================================================================*/
 /*  -99- À positionner
 /*====================================================================================================*/
 .navigation-form{
@@ -773,6 +789,8 @@ form .input-validation-error, form .input-validation-error + .note-editor {
 /*====================================================================================================*/
 /*  -100- À positionner
 /*====================================================================================================*/
+
+
 /*====================================================================================================*/
 /*  -900- SPRITES
 /*====================================================================================================*/
